[package]
name = "confindent"
version = "2.0.1"
description = "⚙️ A configuration format based on indentation"
authors = ["gennyble <brad@genbyte.dev>"]
repository = "https://github.com/gennyble/confindent"
readme = "README.md"
keywords = ["config", "indentation"]
categories = ["config"]
license = "ISC"
edition = "2018"

[dependencies]


[[example]]
name = "read"
